# saferm

./: Cargo.toml  README.md
.github/workflows/: auto-approve.yml  ci.yaml  release.yaml
docs/plans/: 2026-05-23-release-workflow.md
docs/specs/: release-workflow.md
locales/: en.yaml  ja.yaml
scripts/release/: resolve-version.sh  update-version.sh
scripts/tests/: release_helpers_test.sh
src/: cli.rs  i18n.rs  lib.rs  main.rs  ops.rs  prompt.rs
src/trash/: managed.rs  mod.rs  os_trash.rs
tests/: cli_test.rs
