[package]
name = "saferm"
version = "0.1.0"
edition = "2024"
description = "A safe rm replacement that moves files to trash instead of permanent deletion"
license = "MIT"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
console = "0.16"
dialoguer = "0.12"
dirs = "6"
rust-i18n = "3"
sys-locale = "0.3"
trash = "5"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
